rename featured-card, img-full, table-container, cell-middle

--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -502,7 +502,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_9ofhsl"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="No caption provided, listing photo, 53430351_1471249187"
                                                                 elementtiming="LCP-target"
@@ -644,7 +644,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_9ofhsl"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="No caption provided, listing photo, 53430351_1471249192"
                                                                 elementtiming="LCP-target"
@@ -781,7 +781,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_9ofhsl"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="No caption provided, listing photo, 53430351_1471249193"
                                                                 elementtiming="LCP-target"
@@ -918,7 +918,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_9ofhsl"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="No caption provided, listing photo, 53430351_1471249194"
                                                                 elementtiming="LCP-target"
@@ -1055,7 +1055,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_9ofhsl"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="No caption provided, listing photo, 53430351_1471249207"
                                                                 elementtiming="LCP-target"
