--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -235,7 +235,7 @@
                                     aria-label="Profile photo"
                                   >
                                     <img
-                                      class="_9ofhsl"
+                                      class="img-full"
                                       style="
                                         object-fit: cover;
                                         vertical-align: bottom;
