--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -192,7 +192,7 @@
                                   "
                                 >
                                   <img
-                                    class="_9ofhsl"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -243,7 +243,7 @@
                                   "
                                 >
                                   <img
-                                    class="_9ofhsl"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -294,7 +294,7 @@
                                   "
                                 >
                                   <img
-                                    class="_9ofhsl"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -345,7 +345,7 @@
                                   "
                                 >
                                   <img
-                                    class="_9ofhsl"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -396,7 +396,7 @@
                                   "
                                 >
                                   <img
-                                    class="_9ofhsl"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -447,7 +447,7 @@
                                   "
                                 >
                                   <img
-                                    class="_9ofhsl"
+                                    class="img-full"
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
