--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3247,7 +3247,7 @@
                                     "
                                   >
                                     <img
-                                      class="_9ofhsl"
+                                      class="img-full"
                                       aria-hidden="true"
                                       alt="Image for experience with title Cooking Deep Fried Bright Orange Battered Eggs"
                                       decoding="async"
@@ -3326,7 +3326,7 @@
                                     "
                                   >
                                     <img
-                                      class="_9ofhsl"
+                                      class="img-full"
                                       aria-hidden="true"
                                       alt="Image for experience with title Cooking Deep Fried Bright Orange Battered Eggs"
                                       decoding="async"
