--- a/contact-host.html
+++ b/contact-host.html
@@ -344,7 +344,7 @@
                                                                 "
                                                               >
                                                                 <img
-                                                                  class="_9ofhsl"
+                                                                  class="img-full"
                                                                   aria-hidden="true"
                                                                   alt="Rinaldo is a superhost. Learn more about Rinaldo."
                                                                   decoding="async"
@@ -1808,7 +1808,7 @@
                                                                 aria-label="Rinaldo is a superhost. Learn more about Rinaldo."
                                                               >
                                                                 <img
-                                                                  class="_9ofhsl"
+                                                                  class="img-full"
                                                                   aria-hidden="true"
                                                                   alt="Rinaldo is a superhost. Learn more about Rinaldo."
                                                                   decoding="async"
