--- a/covidsafety.html
+++ b/covidsafety.html
@@ -574,7 +574,7 @@
                                               aria-label="Sample image for Mask wearing"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 aria-hidden="true"
                                                 alt="Sample image for Mask wearing"
                                                 decoding="async"
@@ -651,7 +651,7 @@
                                               aria-label="Sample image for Social distancing"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 aria-hidden="true"
                                                 alt="Sample image for Social distancing"
                                                 decoding="async"
@@ -730,7 +730,7 @@
                                               aria-label="Sample image for Enhanced cleaning"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 aria-hidden="true"
                                                 alt="Sample image for Enhanced cleaning"
                                                 decoding="async"
@@ -891,7 +891,7 @@
                                 aria-hidden="true"
                               >
                                 <img
-                                  class="_9ofhsl"
+                                  class="img-full"
                                   style="
                                     object-fit: cover;
                                     vertical-align: bottom;
@@ -1089,7 +1089,7 @@
                                 aria-hidden="true"
                               >
                                 <img
-                                  class="_9ofhsl"
+                                  class="img-full"
                                   style="
                                     object-fit: cover;
                                     vertical-align: bottom;
@@ -1286,7 +1286,7 @@
                                 aria-hidden="true"
                               >
                                 <img
-                                  class="_9ofhsl"
+                                  class="img-full"
                                   style="
                                     object-fit: cover;
                                     vertical-align: bottom;
