--- a/dashboard.html
+++ b/dashboard.html
@@ -2884,7 +2884,7 @@
                                   "
                                 >
                                   <img
-                                    class="_9ofhsl"
+                                    class="img-full"
                                     aria-hidden="true"
                                     alt="[object Object] [object Object]"
                                     decoding="async"
@@ -3093,7 +3093,7 @@
                                 "
                               >
                                 <img
-                                  class="_9ofhsl"
+                                  class="img-full"
                                   aria-hidden="true"
                                   decoding="async"
                                   elementtiming="LCP-target"
