--- a/edit/about.html
+++ b/edit/about.html
@@ -471,7 +471,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="_9ofhsl"
+                                                    class="img-full"
                                                     aria-hidden="true"
                                                     alt=""
                                                     elementtiming="LCP-target"
