--- a/edit/photos.html
+++ b/edit/photos.html
@@ -518,7 +518,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc4MA=="
                                                           elementtiming="LCP-target"
@@ -712,7 +712,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
                                                           elementtiming="LCP-target"
@@ -843,7 +843,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
                                                           elementtiming="LCP-target"
@@ -974,7 +974,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
                                                           elementtiming="LCP-target"
@@ -1105,7 +1105,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
                                                           elementtiming="LCP-target"
@@ -1236,7 +1236,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
                                                           elementtiming="LCP-target"
@@ -1367,7 +1367,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
                                                           elementtiming="LCP-target"
@@ -1498,7 +1498,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
                                                           elementtiming="LCP-target"
@@ -1629,7 +1629,7 @@
                                                           "
                                                           media="(min-width: 1439.1px)" />
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2MA=="
                                                           elementtiming="LCP-target"
@@ -1812,7 +1812,7 @@
                                               "
                                               media="(min-width: 1439.1px)" />
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
                                               elementtiming="LCP-target"
@@ -1871,7 +1871,7 @@
                                               "
                                               media="(min-width: 1439.1px)" />
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
                                               elementtiming="LCP-target"
@@ -1930,7 +1930,7 @@
                                               "
                                               media="(min-width: 1439.1px)" />
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
                                               elementtiming="LCP-target"
@@ -1989,7 +1989,7 @@
                                               "
                                               media="(min-width: 1439.1px)" />
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
                                               elementtiming="LCP-target"
@@ -2048,7 +2048,7 @@
                                               "
                                               media="(min-width: 1439.1px)" />
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
                                               elementtiming="LCP-target"
@@ -2107,7 +2107,7 @@
                                               "
                                               media="(min-width: 1439.1px)" />
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
                                               elementtiming="LCP-target"
@@ -2166,7 +2166,7 @@
                                               "
                                               media="(min-width: 1439.1px)" />
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               aria-hidden="true"
                                               alt="Published  RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
                                               elementtiming="LCP-target"
