--- a/experiences.html
+++ b/experiences.html
@@ -866,13 +866,13 @@
           padding-right: var(--spacing-status-label-horizontal, 6px) !important;
         }
       }
-      ._9ofhsl {
+      .img-full {
         height: 0px !important;
         width: 0px !important;
         position: absolute !important;
       }
       @supports (object-fit: cover) {
-        ._9ofhsl {
+        .img-full {
           height: 100% !important;
           width: 100% !important;
           position: static !important;
@@ -4256,7 +4256,7 @@
                                           "
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt="Cooking Deep Fried Bright Orange Battered Eggs"
                                             decoding="async"
