--- a/help.html
+++ b/help.html
@@ -1526,7 +1526,7 @@
                                                                                 class="_hgs47m"
                                                                               >
                                                                                 <div
-                                                                                  class="_ni9axhe"
+                                                                                  class="cell-middle"
                                                                                 >
                                                                                   <svg
                                                                                     viewBox="0 0 16 16"
@@ -1913,7 +1913,7 @@
                                                                         class="_hgs47m"
                                                                       >
                                                                         <div
-                                                                          class="_ni9axhe"
+                                                                          class="cell-middle"
                                                                         >
                                                                           <svg
                                                                             viewBox="0 0 16 16"
@@ -2206,7 +2206,7 @@
                                                                       class="_hgs47m"
                                                                     >
                                                                       <div
-                                                                        class="_ni9axhe"
+                                                                        class="cell-middle"
                                                                       >
                                                                         <svg
                                                                           viewBox="0 0 16 16"
