--- a/notifications.html
+++ b/notifications.html
@@ -613,7 +613,7 @@
                                                         "
                                                       >
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt=""
                                                           decoding="async"
@@ -713,7 +713,7 @@
                                                         "
                                                       >
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt=""
                                                           decoding="async"
@@ -814,7 +814,7 @@
                                                         "
                                                       >
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt=""
                                                           decoding="async"
@@ -899,7 +899,7 @@
                                                           "
                                                         >
                                                           <img
-                                                            class="_9ofhsl"
+                                                            class="img-full"
                                                             aria-hidden="true"
                                                             alt=""
                                                             decoding="async"
@@ -1020,7 +1020,7 @@
                                                             "
                                                           >
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt=""
                                                               decoding="async"
@@ -1055,7 +1055,7 @@
                                                             "
                                                           >
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt=""
                                                               decoding="async"
@@ -1179,7 +1179,7 @@
                                                         "
                                                       >
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt=""
                                                           decoding="async"
@@ -1293,7 +1293,7 @@
                                                         "
                                                       >
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt=""
                                                           decoding="async"
@@ -1405,7 +1405,7 @@
                                                         "
                                                       >
                                                         <img
-                                                          class="_9ofhsl"
+                                                          class="img-full"
                                                           aria-hidden="true"
                                                           alt=""
                                                           decoding="async"
