--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -301,7 +301,7 @@
                                                 >
                                               </div>
                                             </div>
-                                            <div class="_ni9axhe">
+                                            <div class="cell-middle">
                                               <button
                                                 id="contributions-opt-out"
                                                 role="checkbox"
@@ -890,7 +890,7 @@
                                                       >
                                                     </div>
                                                   </div>
-                                                  <div class="_ni9axhe">
+                                                  <div class="cell-middle">
                                                     <button
                                                       id="contributions-opt-out"
                                                       role="checkbox"
