--- a/places.html
+++ b/places.html
@@ -499,7 +499,7 @@
                                               aria-label="Kelly"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -577,7 +577,7 @@
                                               aria-label="Ehsan"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -664,7 +664,7 @@
                                               aria-label="C-Starr Locations"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -751,7 +751,7 @@
                                               aria-label="Jill"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -834,7 +834,7 @@
                                               aria-label="Connie"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -921,7 +921,7 @@
                                               aria-label="Adrian"
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -13201,7 +13201,7 @@
                                                                 "
                                                               >
                                                                 <img
-                                                                  class="_9ofhsl"
+                                                                  class="img-full"
                                                                   aria-hidden="true"
                                                                   alt=""
                                                                   decoding="async"
@@ -13448,7 +13448,7 @@
                                                                 "
                                                               >
                                                                 <img
-                                                                  class="_9ofhsl"
+                                                                  class="img-full"
                                                                   aria-hidden="true"
                                                                   alt=""
                                                                   decoding="async"
@@ -13675,7 +13675,7 @@
                                                                 "
                                                               >
                                                                 <img
-                                                                  class="_9ofhsl"
+                                                                  class="img-full"
                                                                   aria-hidden="true"
                                                                   alt=""
                                                                   decoding="async"
