--- a/products.html
+++ b/products.html
@@ -1583,7 +1583,7 @@
                                                                   "
                                                                 >
                                                                   <img
-                                                                    class="_9ofhsl"
+                                                                    class="img-full"
                                                                     aria-hidden="true"
                                                                     alt="Rinaldo is a superhost. Learn more about Rinaldo."
                                                                     decoding="async"
@@ -5651,7 +5651,7 @@
                                                                           "
                                                                         >
                                                                           <img
-                                                                            class="_9ofhsl"
+                                                                            class="img-full"
                                                                             aria-hidden="true"
                                                                             alt="Dulce"
                                                                             decoding="async"
@@ -5791,7 +5791,7 @@
                                                                           "
                                                                         >
                                                                           <img
-                                                                            class="_9ofhsl"
+                                                                            class="img-full"
                                                                             aria-hidden="true"
                                                                             alt="Arlene"
                                                                             decoding="async"
@@ -6295,7 +6295,7 @@
                                                               "
                                                             >
                                                               <img
-                                                                class="_9ofhsl"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Rinaldo is a superhost. Learn more about Rinaldo."
                                                                 decoding="async"
@@ -9391,7 +9391,7 @@
                                                                     "
                                                                   >
                                                                     <img
-                                                                      class="_9ofhsl"
+                                                                      class="img-full"
                                                                       aria-hidden="true"
                                                                       alt="Rinaldo is a superhost. Learn more about Rinaldo."
                                                                       decoding="async"
@@ -18468,7 +18468,7 @@
                                                                     "
                                                                   >
                                                                     <img
-                                                                      class="_9ofhsl"
+                                                                      class="img-full"
                                                                       aria-hidden="true"
                                                                       alt="Dulce"
                                                                       decoding="async"
@@ -18592,7 +18592,7 @@
                                                                     "
                                                                   >
                                                                     <img
-                                                                      class="_9ofhsl"
+                                                                      class="img-full"
                                                                       aria-hidden="true"
                                                                       alt="Arlene"
                                                                       decoding="async"
@@ -18809,7 +18809,7 @@
                                                                     "
                                                                   >
                                                                     <img
-                                                                      class="_9ofhsl"
+                                                                      class="img-full"
                                                                       aria-hidden="true"
                                                                       alt="Prudz"
                                                                       decoding="async"
@@ -18995,7 +18995,7 @@
                                                                     "
                                                                   >
                                                                     <img
-                                                                      class="_9ofhsl"
+                                                                      class="img-full"
                                                                       aria-hidden="true"
                                                                       alt="Delwyn"
                                                                       decoding="async"
@@ -19179,7 +19179,7 @@
                                                                     "
                                                                   >
                                                                     <img
-                                                                      class="_9ofhsl"
+                                                                      class="img-full"
                                                                       aria-hidden="true"
                                                                       alt="Kristoffer"
                                                                       decoding="async"
@@ -19379,7 +19379,7 @@
                                                                     "
                                                                   >
                                                                     <img
-                                                                      class="_9ofhsl"
+                                                                      class="img-full"
                                                                       aria-hidden="true"
                                                                       alt="Janice"
                                                                       decoding="async"
@@ -19656,7 +19656,7 @@
                                                             "
                                                           >
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt="Rinaldo is a superhost. Learn more about Rinaldo."
                                                               decoding="async"
