--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -25,7 +25,7 @@
           <header role="banner" class="_8iqo2b">
             <div class="_19trzwd">
               <div class="_hgs47m">
-                <div class="_ni9axhe">
+                <div class="cell-middle">
                   <div>
                     <div class="_ousp44">
                       <div>
@@ -207,7 +207,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="_ni9axhe nav-links-lg">
+                <div class="cell-middle nav-links-lg">
                   <div>
                     <div class="_cfvh61">
                       <nav aria-label="Main navigation menu">
@@ -732,8 +732,8 @@
                         <div class="_7qp4lh"></div>
                       </div>
                     </div>
-                    <div class="_djxl322">
-                      <div class="_ni9axhe">
+                    <div class="table-container">
+                      <div class="cell-middle">
                         <div
                           itemscope=""
                           itemtype="http://schema.org/Organization"
