--- a/profile.html
+++ b/profile.html
@@ -403,7 +403,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 aria-hidden="true"
                                                 alt="Jose Angelo User Profile"
                                                 elementtiming="LCP-target"
@@ -617,7 +617,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="_9ofhsl"
+                                                    class="img-full"
                                                     aria-hidden="true"
                                                     alt="Jose Angelo User Profile"
                                                     elementtiming="LCP-target"
@@ -1473,7 +1473,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           "
                                                         >
                                                           <img
-                                                            class="_9ofhsl"
+                                                            class="img-full"
                                                             aria-hidden="true"
                                                             alt="Jesselle User Profile"
                                                             decoding="async"
@@ -1555,7 +1555,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         aria-label="Jose Angelo User Profile"
                                       >
                                         <img
-                                          class="_9ofhsl"
+                                          class="img-full"
                                           style="
                                             object-fit: cover;
                                             vertical-align: bottom;
@@ -1770,7 +1770,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             aria-label="Jose Angelo User Profile"
                                           >
                                             <img
-                                              class="_9ofhsl"
+                                              class="img-full"
                                               style="
                                                 object-fit: cover;
                                                 vertical-align: bottom;
@@ -2622,7 +2622,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     aria-label="Jesselle User Profile"
                                                   >
                                                     <img
-                                                      class="_9ofhsl"
+                                                      class="img-full"
                                                       aria-hidden="true"
                                                       alt="Jesselle User Profile"
                                                       decoding="async"
