--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -127,7 +127,7 @@
                               "
                             >
                               <img
-                                class="_9ofhsl"
+                                class="img-full"
                                 aria-hidden="true"
                                 alt="User Profile Image"
                                 elementtiming="LCP-target"
