--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -158,7 +158,7 @@
                             "
                           >
                             <img
-                              class="_9ofhsl"
+                              class="img-full"
                               aria-hidden="true"
                               alt="User Profile Image"
                               elementtiming="LCP-target"
@@ -324,7 +324,7 @@
                                         class="_1wcpnjd"
                                       >
                                         <div class="_hgs47m">
-                                          <div class="_ni9axhe">
+                                          <div class="cell-middle">
                                             <div>
                                               <div class="_18z8fput">
                                                 <svg
@@ -380,7 +380,7 @@
                                       value="0GK1hkGg1kPGJ4rea4DKyNApow5"
                                     /><span class="_qcdbez"
                                       ><div class="_nncr1bm">
-                                        <div class="_ni9axhe">
+                                        <div class="cell-middle">
                                           <div
                                             class="_wn4bip"
                                             style="transform: rotate(0deg)"
