--- a/resources.html
+++ b/resources.html
@@ -32,9 +32,9 @@
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
                   <div class="_hgs47m">
-                    <div class="_ni9axhe">
+                    <div class="cell-middle">
                       <div class="_hgs47m">
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <a
                             href="/?logo=1"
                             aria-label="Airbnb homepage"
@@ -63,7 +63,7 @@
                           ></a>
                         </div>
                         <div class="_10ejfg4u"></div>
-                        <div class="_ni9axhe">
+                        <div class="cell-middle">
                           <div style="margin-right: 16px">
                             <div class="_1ltxwi4">
                               <a
@@ -160,7 +160,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="_ni9axhe">
+                    <div class="cell-middle">
                       <div class="_cfvh61">
                         <div data-hideat="largeAndAbove" class="menu-btn-xs">
                           <div style="margin-right: 24px">
@@ -4050,7 +4050,7 @@
                                           aria-label="An Experience Host explains different kinds of dried chile peppers to their guests in a Mexico City market stall."
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             style="
                                               object-fit: cover;
                                               vertical-align: bottom;
@@ -4137,7 +4137,7 @@
                                           aria-label="Host demonstrating how to shape pastry dough while two guests watch and try to shape their own dough"
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             style="
                                               object-fit: cover;
                                               vertical-align: bottom;
@@ -4246,7 +4246,7 @@
                                           aria-label="Guest frosting a cake while Host watches and smiles"
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             style="
                                               object-fit: cover;
                                               vertical-align: bottom;
@@ -4333,7 +4333,7 @@
                                           aria-label="An Experience Host and her guests sitting on a rock outdoors, smiling and laughing"
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             style="
                                               object-fit: cover;
                                               vertical-align: bottom;
@@ -4420,7 +4420,7 @@
                                           aria-label="Experience guest smiling while making pottery on a wheel."
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             style="
                                               object-fit: cover;
                                               vertical-align: bottom;
@@ -4507,7 +4507,7 @@
                                           aria-label="Light pink Airbnb logo on dark fuchsia background"
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             style="
                                               object-fit: cover;
                                               vertical-align: bottom;
