--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -80,7 +80,7 @@
                             "
                           >
                             <img
-                              class="_9ofhsl"
+                              class="img-full"
                               aria-hidden="true"
                               alt=""
                               elementtiming="LCP-target"
