--- a/reviews.html
+++ b/reviews.html
@@ -817,7 +817,7 @@
                                           "
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
@@ -869,7 +869,7 @@
                                           "
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
@@ -921,7 +921,7 @@
                                           "
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
@@ -973,7 +973,7 @@
                                           "
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
@@ -1025,7 +1025,7 @@
                                           "
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
@@ -1077,7 +1077,7 @@
                                           "
                                         >
                                           <img
-                                            class="_9ofhsl"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
