--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1156,7 +1156,7 @@
                                                 "
                                               >
                                                 <div class="_nncr1bm">
-                                                  <div class="_ni9axhe">
+                                                  <div class="cell-middle">
                                                     INR
                                                   </div>
                                                 </div>
@@ -2331,7 +2331,7 @@
                                     style="top: 59.8364px; left: 102px"
                                   >
                                     <div class="_hzrmny">
-                                      <div class="_1jlnvra2">₹98.40</div>
+                                      <div class="featured-card__text">₹98.40</div>
                                       <div class="_vgark8"></div>
                                     </div>
                                   </div>
