--- a/submission/about.html
+++ b/submission/about.html
@@ -1147,7 +1147,7 @@
                                         "
                                       >
                                         <img
-                                          class="_9ofhsl"
+                                          class="img-full"
                                           aria-hidden="true"
                                           alt=""
                                           elementtiming="LCP-target"
