--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1075,7 +1075,7 @@
                                       Cutoff time for additional guests
                                     </div></label
                                   >
-                                  <div class="_1jlnvra2">
+                                  <div class="featured-card__text">
                                     If an instance is booked, this is how far in
                                     advance any new guests can book.
                                   </div>
@@ -1199,7 +1199,7 @@
                                       Cutoff time for your first guest
                                     </div></label
                                   >
-                                  <div class="_1jlnvra2">
+                                  <div class="featured-card__text">
                                     If no one books by this cutoff time, the
                                     instance won't be available to guests.
                                   </div>
