--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1156,7 +1156,7 @@
                                                               "
                                                               media="(min-width: 1439.1px)" />
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt="No caption provided, listing photo, 4016631_1444327577"
                                                               elementtiming="LCP-target"
@@ -1280,7 +1280,7 @@
                                                               "
                                                               media="(min-width: 1439.1px)" />
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt="No caption provided, listing photo, 4016631_1444327609"
                                                               elementtiming="LCP-target"
@@ -1404,7 +1404,7 @@
                                                               "
                                                               media="(min-width: 1439.1px)" />
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt="No caption provided, listing photo, 4016631_1444327648"
                                                               elementtiming="LCP-target"
@@ -1528,7 +1528,7 @@
                                                               "
                                                               media="(min-width: 1439.1px)" />
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt="No caption provided, listing photo, 4016631_1444327652"
                                                               elementtiming="LCP-target"
@@ -1652,7 +1652,7 @@
                                                               "
                                                               media="(min-width: 1439.1px)" />
                                                             <img
-                                                              class="_9ofhsl"
+                                                              class="img-full"
                                                               aria-hidden="true"
                                                               alt="No caption provided, listing photo, 4016631_1444327660"
                                                               elementtiming="LCP-target"
