--- a/gift.html
+++ b/gift.html
@@ -205,7 +205,7 @@
                                     aria-label="Example gift card"
                                   >
                                     <img
-                                      class="_9ofhsl"
+                                      class="img-full"
                                       style="
                                         object-fit: cover;
                                         vertical-align: bottom;
@@ -372,7 +372,7 @@
                                 aria-label="Example gift card"
                               >
                                 <img
-                                  class="_9ofhsl"
+                                  class="img-full"
                                   style="
                                     object-fit: cover;
                                     vertical-align: bottom;
