--- a/payment.html
+++ b/payment.html
@@ -685,7 +685,7 @@
                                                                     class="_hgs47m"
                                                                   >
                                                                     <div
-                                                                      class="_ni9axhe"
+                                                                      class="cell-middle"
                                                                     >
                                                                       <div>
                                                                         <div
@@ -754,7 +754,7 @@
                                                                   class="_nncr1bm"
                                                                 >
                                                                   <div
-                                                                    class="_ni9axhe"
+                                                                    class="cell-middle"
                                                                   >
                                                                     <div
                                                                       class="_wn4bip"
@@ -1047,7 +1047,7 @@
                                                       "
                                                     >
                                                       <img
-                                                        class="_9ofhsl"
+                                                        class="img-full"
                                                         aria-hidden="true"
                                                         alt=""
                                                         elementtiming="LCP-target"
