--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -289,7 +289,7 @@
                                     </div>
                                   </div>
                                   <div style="margin-top: 8px">
-                                    <div class="_1jlnvra2">
+                                    <div class="featured-card__text">
                                       <div class="_17j792vp">
                                         Edit your company info and manage your
                                         listings at scale
@@ -317,7 +317,7 @@
                                           id="email_removal_whitelist_switch--subtitle"
                                           style="margin-top: 4px"
                                         >
-                                          <div class="_1jlnvra2">
+                                          <div class="featured-card__text">
                                             <div class="_17j792vp">
                                               I attest that I will use the email
                                               alias only for the following
@@ -355,7 +355,7 @@
                                         </div>
                                       </div>
                                     </div>
-                                    <div class="_ni9axhe">
+                                    <div class="cell-middle">
                                       <button
                                         id="email_removal_whitelist_switch"
                                         role="checkbox"
@@ -689,7 +689,7 @@
                                         </div>
                                       </div>
                                       <div style="margin-top: 8px">
-                                        <div class="_1jlnvra2">
+                                        <div class="featured-card__text">
                                           <div class="_17j792vp">
                                             Edit your company info and manage
                                             your listings at scale
@@ -717,7 +717,7 @@
                                               id="email_removal_whitelist_switch--subtitle"
                                               style="margin-top: 4px"
                                             >
-                                              <div class="_1jlnvra2">
+                                              <div class="featured-card__text">
                                                 <div class="_17j792vp">
                                                   I attest that I will use the
                                                   email alias only for the
@@ -758,7 +758,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_ni9axhe">
+                                        <div class="cell-middle">
                                           <button
                                             id="email_removal_whitelist_switch"
                                             role="checkbox"
