--- a/resolutions.html
+++ b/resolutions.html
@@ -104,7 +104,7 @@
                               "
                             >
                               <img
-                                class="_9ofhsl"
+                                class="img-full"
                                 aria-hidden="true"
                                 alt="User Profile Image"
                                 elementtiming="LCP-target"
