--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -42,7 +42,7 @@
             <header role="banner" class="_8iqo2b">
               <div class="_19trzwd">
                 <div class="_hgs47m">
-                  <div class="_ni9axhe">
+                  <div class="cell-middle">
                     <div>
                       <div class="_z4lmgp">
                         <div class="_b21f4g" aria-hidden="true"></div>
@@ -172,7 +172,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="_ni9axhe">
+                  <div class="cell-middle">
                     <div data-showat="largeAndAbove">
                       <div class="_cfvh61">
                         <nav aria-label="Main navigation menu">
@@ -431,7 +431,7 @@
                             "
                           >
                             <img
-                              class="_9ofhsl"
+                              class="img-full"
                               aria-hidden="true"
                               alt="User Profile Image"
                               elementtiming="LCP-target"
