--- a/wishlists.html
+++ b/wishlists.html
@@ -254,7 +254,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="_9ofhsl"
+                                                    class="img-full"
                                                     aria-hidden="true"
                                                     alt="1st Wishlist"
                                                     elementtiming="LCP-target"
@@ -325,7 +325,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="_9ofhsl"
+                                                    class="img-full"
                                                     aria-hidden="true"
                                                     alt="5th"
                                                     elementtiming="LCP-target"
@@ -386,7 +386,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="_9ofhsl"
+                                                    class="img-full"
                                                     aria-hidden="true"
                                                     alt="Cooking"
                                                     elementtiming="LCP-target"
@@ -449,7 +449,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="_9ofhsl"
+                                                    class="img-full"
                                                     aria-hidden="true"
                                                     alt="Concerts"
                                                     elementtiming="LCP-target"
@@ -512,7 +512,7 @@
                                                   "
                                                 >
                                                   <img
-                                                    class="_9ofhsl"
+                                                    class="img-full"
                                                     aria-hidden="true"
                                                     alt="Experiences"
                                                     elementtiming="LCP-target"
@@ -755,7 +755,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -788,7 +788,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -820,7 +820,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -870,7 +870,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -902,7 +902,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -934,7 +934,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -981,7 +981,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -1013,7 +1013,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -1045,7 +1045,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -1092,7 +1092,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   object-position: center center;
@@ -1125,7 +1125,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   object-position: center center;
@@ -1173,7 +1173,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -1205,7 +1205,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
@@ -1237,7 +1237,7 @@
                                               "
                                             >
                                               <img
-                                                class="_9ofhsl"
+                                                class="img-full"
                                                 style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
